Rename footer titles classes

--- a/css/styles.css
+++ b/css/styles.css
@@ -438,7 +438,7 @@ img {
   margin-right: 120px;
 }
 
-.subscribe-title {
+.footer-title {
   color: var(--body-bg-color);
   font-size: 16px;
   font-weight: 500;
