--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,19 @@ img {
   gap: 24px;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /*Navigation-section*/
 .header {
   border-bottom: 1px solid var(--portfolio-border-color);
@@ -244,19 +257,6 @@ img {
   border: 1px solid #8e8f99;
   background: var(--bright_text-color);
   margin-bottom: 8px;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
 
 /*Team-section*/
@@ -528,7 +528,51 @@ img {
   gap: 24px;
 }
 
-.modal {
+/*End footer-section*/
+
+/*Modal*/
+
+.backdrop {
+  position: fixed;
+  inset: 0;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+/* .is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+} */
+
+.modal {
+  position: relative;
+  border-radius: 4px;
+  background: #fcfcfc;
+  width: 408px;
+  height: 584px;
+  padding: 72px 24px 24px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+}
+
+.form-textarea {
+  resize: none;
+}
+
+/*End Modal*/
