--- a/css/styles.css
+++ b/css/styles.css
@@ -618,11 +618,17 @@ img {
   margin-bottom: 4px;
 }
 
+.modal-input-wrap {
+  position: relative;
+}
+
 .modal-input {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   background: #fcfcfc;
-  padding: 8px 16px;
+  padding: 8px 34px;
+  width: 100%;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -630,9 +636,22 @@ img {
   border-color: #4d5ae5;
 }
 
-textarea {
+.modal-input-icon {
+  position: absolute;
+  top: 11px;
+  left: 16px;
+  bottom: 11px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .modal-input-icon {
+  fill: var(--primary-brand-color);
+}
+
+.modal-textarea {
   height: 120px;
   resize: none;
+  padding: 8px 16px;
 }
 
 .commemt-field {
@@ -648,10 +667,22 @@ textarea::placeholder {
   letter-spacing: 0.04em;
 }
 
-.checkbox-feild {
+.modal-checkbox-wrap {
   display: inline-flex;
+}
 
+.modal-checkbox-label {
+  color: #8e8f99;
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
   margin-bottom: 24px;
+}
+
+modal-checkbox-input:checked + .modal-checkbox-label {
+  color: #404bbf;
 }
 
 .checkbox-icon {
@@ -660,10 +691,6 @@ textarea::placeholder {
   border-color: rgba(46, 47, 66, 0.4);
   background-color: var(--body-bg-color);
 }
-
-/* background-color: var(--portfolio-border-color);
-  border-width: 1px;
-  border-color: rgba(0, 0, 0, 0.1); */
 
 .privacy-policy {
   text-decoration: underline;
