--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,14 @@
 :root {
   --body-text-color: #434455;
   --body-bg-color: #fff;
+  --bright-bg-color: #fcfcfc;
   --bright_text-color: #f4f4fd;
   --headings-color: #2e2f42;
   --primary-brand-color: #4d5ae5;
   --active-button-color: #404bbf;
   --portfolio-border-color: #e7e9fc;
   --footer-active-links-bg: #31d0aa;
+  --light-grey-color: #8e8f99;
 }
 
 body {
@@ -154,7 +156,7 @@ img {
   left: 0;
   bottom: -1px;
   height: 4px;
-  background-color: #404bbf;
+  background-color: var(--active-button-color);
   border-radius: 2px;
   width: 100%;
 }
@@ -254,7 +256,7 @@ img {
   justify-content: center;
   height: 112px;
   border-radius: 4px;
-  border: 1px solid #8e8f99;
+  border: 1px solid var(--light-grey-color);
   background: var(--bright_text-color);
   margin-bottom: 8px;
 }
@@ -485,7 +487,7 @@ img {
   width: 264px;
   height: 40px;
   border-radius: 4px;
-  border: 1px solid var(--WHITE, #fff);
+  border: 1px solid var(--body-bg-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   background-color: var(--headings-color);
   padding: 8px 16px;
@@ -560,7 +562,7 @@ img {
 .modal {
   position: relative;
   border-radius: 4px;
-  background: #fcfcfc;
+  background: var(--bright-bg-color);
   width: 100%;
   max-width: 408px;
   height: 100%;
@@ -609,7 +611,7 @@ img {
 }
 
 .modal-label {
-  color: #8e8f99;
+  color: var(--light-grey-color);
   font-family: Roboto;
   font-size: 12px;
   font-weight: 400;
@@ -625,15 +627,16 @@ img {
 .modal-input {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  background: #fcfcfc;
+  background: var(--bright-bg-color);
   padding: 8px 34px;
   width: 100%;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus {
+.modal-input:focus,
+.modal-textarea:focus {
   outline: none;
-  border-color: #4d5ae5;
+  border-color: var(--primary-brand-color);
 }
 
 .modal-input-icon {
@@ -650,8 +653,13 @@ img {
 
 .modal-textarea {
   height: 120px;
+  width: 100%;
   resize: none;
   padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background: var(--bright-bg-color);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .commemt-field {
@@ -669,27 +677,35 @@ textarea::placeholder {
 
 .modal-checkbox-wrap {
   display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+
+.modal-checkbox-check {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+}
+
+.modal-checkbox-icon {
+  fill: var(--active-button-color);
+  opacity: 0;
+}
+
+.modal-checkbox-input:checked + .modal-checkbox-check .modal-checkbox-icon {
+  opacity: 1;
 }
 
 .modal-checkbox-label {
-  color: #8e8f99;
+  color: var(--light-grey-color);
   font-family: Roboto;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.16;
   letter-spacing: 0.04em;
-  margin-bottom: 24px;
-}
-
-modal-checkbox-input:checked + .modal-checkbox-label {
-  color: #404bbf;
-}
-
-.checkbox-icon {
-  margin-right: 8px;
-  border-width: 1px;
-  border-color: rgba(46, 47, 66, 0.4);
-  background-color: var(--body-bg-color);
 }
 
 .privacy-policy {
