--- a/css/styles.css
+++ b/css/styles.css
@@ -486,11 +486,16 @@ img {
 .subscribe-input {
   width: 264px;
   height: 40px;
+  color: var(--body-bg-color);
   border-radius: 4px;
   border: 1px solid var(--body-bg-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   background-color: var(--headings-color);
-  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
 .subscribe-input::placeholder {
@@ -504,10 +509,12 @@ img {
 
 .subscribe-btn {
   min-width: 165px;
+  height: 40px;
   border-radius: 4px;
+  border: none;
   background: var(--primary-brand-color);
   color: var(--body-bg-color);
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -517,9 +524,11 @@ img {
   justify-content: center;
   align-items: center;
   gap: 16px;
+  cursor: pointer;
 }
 
 .subscribe-btn-icon {
+  margin-left: 16px;
   fill: var(--body-bg-color);
 }
 
@@ -545,6 +554,8 @@ img {
   visibility: hidden;
   pointer-events: none;
   padding: 8px;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-open {
@@ -560,13 +571,17 @@ img {
 } */
 
 .modal {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   background: var(--bright-bg-color);
-  width: 100%;
-  max-width: 408px;
-  height: 100%;
-  max-height: 584px;
+  width: 408px;
+  min-height: 584px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px;
 }
 
@@ -580,17 +595,25 @@ img {
   width: 24px;
   height: 24px;
   background-color: var(--portfolio-border-color);
-  border-width: 1px;
-  border-color: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  padding: 0;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:active {
+.modal-close:hover,
+.modal-close:focus {
   background-color: var(--active-button-color);
+  border: none;
 }
 
-.modal-close:active .close-icon {
+.close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover .close-icon,
+.modal-close:focus .close-icon {
   fill: var(--body-bg-color);
 }
 
@@ -601,6 +624,7 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
   margin-bottom: 16px;
 }
 
@@ -615,7 +639,7 @@ img {
   font-family: Roboto;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   margin-bottom: 4px;
 }
@@ -627,9 +651,11 @@ img {
 .modal-input {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  background: var(--bright-bg-color);
-  padding: 8px 34px;
+  outline: transparent;
+  background-color: transparent;
+  padding-left: 38px;
   width: 100%;
+  height: 40px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -641,9 +667,9 @@ img {
 
 .modal-input-icon {
   position: absolute;
-  top: 11px;
   left: 16px;
-  bottom: 11px;
+  top: 50%;
+  transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -655,10 +681,15 @@ img {
   height: 120px;
   width: 100%;
   resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  outline: transparent;
   padding: 8px 16px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  background: var(--bright-bg-color);
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -683,33 +714,46 @@ textarea::placeholder {
   margin-bottom: 24px;
 }
 
-.modal-checkbox-check {
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-}
-
-.modal-checkbox-icon {
-  fill: var(--active-button-color);
-  opacity: 0;
-}
-
-.modal-checkbox-input:checked + .modal-checkbox-check .modal-checkbox-icon {
-  opacity: 1;
-}
-
 .modal-checkbox-label {
   color: var(--light-grey-color);
   font-family: Roboto;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
 }
 
 .privacy-policy {
+  color: #4d5ae5;
   text-decoration: underline;
 }
+
+.modal-checkbox-check {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+.modal-checkbox-input:checked + .modal-checkbox-label .modal-checkbox-check {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+/* .modal-checkbox-input:checked + .modal-checkbox-check .modal-checkbox-icon {
+  opacity: 1;
+}
+
+.modal-checkbox-icon {
+  fill: var(--active-button-color);
+  opacity: 0; */
 
 /*End Modal*/
