--- a/css/styles.css
+++ b/css/styles.css
@@ -490,7 +490,7 @@ img {
   border-radius: 4px;
   border: 1px solid var(--body-bg-color);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background-color: var(--headings-color);
+  background-color: transparent;
   font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
